* Fri Apr 04 2008 Damien Caliste <damien.caliste@cea.fr> 1.0.1
- Add a --with-moduledir option to the configure to be able to choose the
	installation path for modules.
- Update the fortran.m4 macro to recognise newest version of gfortran (>4.1).

* Tue Aug 21 2007 Damien Caliste <damien.caliste@cea.fr> 1.0.0
- Official publication of version 1.0.0.

* Thu Aug 09 2007 Damien Caliste <damien.caliste@cea.fr> 1.0-rc2
- correct a bug in etsf_io when checking the wavefunctions in plane_waves
	mode with k_dependent = "no".
- add a simple routine in etsf_io_low_level to read the flag attribute as
	defined in the specifications. Also add tests for this routine.
- add the support of split definition in the check routines.
- bugs corrections in tests/low_level, src/low_level/read_routines.f90,
	the documentation...

* Fri Jul 06 2007 Damien Caliste <damien.caliste@cea.fr> 1.0-rc1
- add tests for the copy action of the ETSF groups.
- add a tutorial on the reading part, very simple with the basics of the
	etsf_io_<group>_get routines and the possible split definitions.
- add gestion of the use_time_reversal_at_gamma attribute as introduced by
	the 2.2 specifications.
- add a full backtrace for the routines in the library to ease the
	tracking of errors when called from an other program.
- add a way to precisely choose the variables when defining a file. This
	has bringed some minor in the ETSF group API, for etsf_io_main_*
	and for etsf_io_data_*.
- add the wavelet basis set as discussed in the IT9 meeting in San
	Sebastian in May 2007 (still in a draft for inclusion in
	specifications when 0.10 has been shipped).
	
* Fri May 11 2007 Damien Caliste <damien.caliste@cea.fr> 0.9
- complete all TODO occurances in the HTML pages.
- update all licence citation and remove all ABINIT occurance. Also add 2007 to the
  copyright and the name of the author for each part of the code.
- implement a copy_all_attribute routine in the low_level module. This routine