@@ -9,7 +9,7 @@ dnl  - PACKAGE_TARNAME, the name used for the tarball ;
 dnl  - PACKAGE_VERSION, the version ;
 dnl  - PACKAGE_STRING, the name + the version ;
 dnl  - PACKAGE_BUGREPORT, the mail.
-AC_INIT([ETSF - IO library], [1.0.1], [damien.caliste@cea.fr], [etsf_io])
+AC_INIT([ETSF - IO library], [1.0.2], [damien.caliste@cea.fr], [etsf_io])
 
 dnl All temporary building files are put in this directory.
 dnl his must be called before AM_INIT_AUTOMAKE
@@ -39,6 +39,9 @@ dnl Set if the module name are capitalized or not with the FC compiler.
 AC_MSG_CHECKING([for module extension for compiler '$fc_type'])
 case "$fc_type" in
   "pathscale")
+     capitalize_module=yes
+     capitalize_module_ext="mod" ;;
+  "open64")
      capitalize_module=yes
      capitalize_module_ext="mod" ;;
   *)
